# e2ee-rust-beta

./: Cargo.toml  README.md  install.sh
capi/: Cargo.toml  e2ee.h
capi/src/: lib.rs
curve-crypto/: Cargo.toml
curve-crypto/benches/: curve25519.rs
curve-crypto/src/: errors.rs  lib.rs  private.rs  public.rs  signature.rs
curve-crypto/tests/: curve25519.rs
jniapi/: Cargo.toml
jniapi/src/: lib.rs
rust/: Cargo.toml  build.rs
rust/src/: address.rs  errors.rs  keys.rs  lib.rs  message.proto  message.rs  ratchet.rs  session_builder.rs  session_record.rs  session_state.rs  storage.proto  store.rs
