[package]
name = "curve-crypto"
version = "0.1.0"
authors = ["Bean"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = { version = "2", default-features = false }
rand_core = { version = "0.5", default-features = false }
rand = "0.7"
log = "0.4"
thiserror = "1.0"
anyhow = "1.0"
zeroize = { version = "1", default-features = false, features = ["zeroize_derive"] }
sha2 = { version = "0.8", default-features = false }

[dev-dependencies]
hex = "^0.4"
criterion = "0.3"

[features]
default = ["std", "u64_backend"]
std = ["curve25519-dalek/std"]
u64_backend = ["curve25519-dalek/u64_backend"]
u32_backend = ["curve25519-dalek/u32_backend"]
