[package]
name = "e2ee-android"
version = "0.1.0"
authors = ["Bean"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
curve-crypto = { path = "../curve-crypto" }
rust = { path = "../rust" }
rand_core = { version = "0.5", default-features = false }
jni = { version = "0.16", default-features = false }
log = "0.4"
log-panics = "2.0"
android_logger = "0.8"
jni-sys = "0.3"
lazy_static = "1.4"