[package]
name = "rust"
version = "0.1.0"
authors = ["Bean"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve-crypto = { path = "../curve-crypto" }
rand_core = { version = "0.5", default-features = false }
zeroize = { version = "1", default-features = false, features = ["zeroize_derive"] }
sha2 = { version = "0.8", default-features = false }
prost = "0.6"
hkdf = "0.8"
hmac = "0.7"
aes = "0.3"
block-modes = "0.2"
hex = "0.4"
thiserror = "1.0"
anyhow = { version = "1.0", default-features = false}
log = "0.4"
log-panics = "2.0"
android_logger = "0.8"

[build-dependencies]
prost-build = { version = "0.6" }
